removed "." in image location

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h2 class="section-title">What Are We Doing</h2>
           <ul class="what-we-do list">
             <li class="item">
-              <img srcset="../images/img-1-monitor.jpg 1x, ../images/img-1-monitor@2x.jpg 2x" 
+              <img srcset="./images/img-1-monitor.jpg 1x, ./images/img-1-monitor@2x.jpg 2x" 
 
                 src="./images/img-1-monitor.jpg"
                 alt="monitor"
@@ -145,7 +145,7 @@
               <!--I copied the width and height from the Figma Homework 1 Reference-->
             </li>
             <li class="item">
-              <img srcset="../images/img-2-mobile-phone.jpg 1x, ../images/img-2-mobile-phone@2x.jpg 2x" 
+              <img srcset="./images/img-2-mobile-phone.jpg 1x, ./images/img-2-mobile-phone@2x.jpg 2x" 
 
                 src="./images/img-2-mobile-phone.jpg"
                 alt="mobile phone"
@@ -155,7 +155,7 @@
               />
             </li>
             <li class="item">
-              <img srcset="../images/img-3-mobile-phone-2.jpg 1x, ../images/img-3-mobile-phone-2@2x.jpg 2x" 
+              <img srcset="./images/img-3-mobile-phone-2.jpg 1x, ./images/img-3-mobile-phone-2@2x.jpg 2x" 
 
                 src="./images/img-3-mobile-phone-2.jpg"
                 alt="mobile phone with hand"
