--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team list">
             <li class="item">
-              <img srcset="../images/mark-guerrero.jpg 1x, ../images/mark-guerrero@2x.jpg 2x" 
+              <img srcset="./images/mark-guerrero.jpg 1x, ./images/mark-guerrero@2x.jpg 2x" 
                 src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -236,7 +236,7 @@
             </li>
 
             <li class="item">
-              <img srcset="../images/tom-ford.jpg 1x, ../images/tom-ford@2x.jpg 2x" 
+              <img srcset="./images/tom-ford.jpg 1x, ./images/tom-ford@2x.jpg 2x" 
                 src="./images/tom-ford.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -297,7 +297,7 @@
               </ul>
             </li>
             <li class="item">
-              <img srcset="../images/camila-garcia.jpg 1x, ../images/camila-garcia@2x.jpg 2x" 
+              <img srcset="./images/camila-garcia.jpg 1x, ./images/camila-garcia@2x.jpg 2x" 
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -358,7 +358,7 @@
               </ul>
             </li>
             <li class="item">
-              <img srcset="../images/daniel-wilson.jpg 1x, ../images/daniel-wilson@2x.jpg 2x" 
+              <img srcset="./images/daniel-wilson.jpg 1x, ./images/daniel-wilson@2x.jpg 2x" 
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
