--- a/index.html
+++ b/index.html
@@ -550,12 +550,12 @@
 
           <!-- Subscribe Field -->
         
-          <div class="subscribe-field">
+          <form class="subscribe-field">
             <b class="footer-heading"> Subscribe </b>
 
             <div class="subscribe-block">
               <label class="footer-subscribe">
-                <input class="footer-form-input" type="email" name="user-email" placeholder="E-mail">
+                <input required class="footer-form-input" type="email" name="user-email" placeholder="E-mail">
               </label>
 
               <button type="submit" class="button subscribe">
@@ -565,7 +565,7 @@
                 </svg>
               </button>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
@@ -685,14 +685,13 @@
         </ul>
         <ul class="contacts-mobile-menu list">
           <li class="contacts-mobile-menu-item">
-            <a href="mailto:info@devstudio.com" class="contacts-mobile-menu-contact link"
-              >info@devstudio.com</a
-            >
+            <a href="tel:+110001111111" class="contacts-mobile-menu-contact link"
+            >+11 (000) 111-11-11</a>
+
           </li>
           <li class="contacts-mobile-menu-item">
-            <a href="tel:+110001111111" class="contacts-mobile-menu-contact link"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="mailto:info@devstudio.com" class="contacts-mobile-menu-contact link"
+            >info@devstudio.com</a>
           </li>
         </ul>
       </div>
